# PriceIsRight

./: .env  README.md  batches.pkl  pyproject.toml  requirements.txt
full/batches/: 0_1000.jsonl  100000_101000.jsonl  10000_11000.jsonl  1000_2000.jsonl  101000_102000.jsonl  102000_103000.jsonl  103000_104000.jsonl  104000_105000.jsonl  105000_106000.jsonl  106000_107000.jsonl  107000_108000.jsonl  108000_109000.jsonl  109000_110000.jsonl  110000_111000.jsonl  11000_12000.jsonl  111000_112000.jsonl  112000_113000.jsonl  113000_114000.jsonl  114000_115000.jsonl  115000_116000.jsonl  116000_117000.jsonl  117000_118000.jsonl  118000_119000.jsonl  119000_120000.jsonl  120000_121000.jsonl  12000_13000.jsonl  121000_122000.jsonl  122000_123000.jsonl  123000_124000.jsonl  124000_125000.jsonl  125000_126000.jsonl  126000_127000.jsonl  127000_128000.jsonl  128000_129000.jsonl  129000_130000.jsonl  130000_131000.jsonl  13000_14000.jsonl  131000_132000.jsonl  132000_133000.jsonl  133000_134000.jsonl  (+377 more)
pricer/: __init__.py  batch.py  loader.py  model.py  parser.py  preprocessor.py
pricer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: pipeline.py
