[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "pricer"
version = "0.1.0"
description = "Amazon product price prediction via LLM summarisation + DNN regression"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "openai>=1.30.0",
    "torch>=2.3.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pricer*"]
